[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/lair/LairHUD.gd" type="Script" id=1]
[ext_resource path="res://assets/map.png" type="Texture" id=2]
[ext_resource path="res://assets/arrow_up.png" type="Texture" id=3]
[ext_resource path="res://assets/arrow_down.png" type="Texture" id=4]
[ext_resource path="res://assets/arrow_left.png" type="Texture" id=5]
[ext_resource path="res://assets/arrow_right.png" type="Texture" id=6]
[ext_resource path="res://assets/stairs.jpg" type="Texture" id=7]

[node name="LairHUD" type="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Map" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 66.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Vertical" type="VBoxContainer" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_right = 568.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Size Flags" ]

[node name="Up" type="MarginContainer" parent="Vertical" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 104.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 2
_sections_unfolded = [ "Size Flags" ]

[node name="UpArrow" type="TextureButton" parent="Vertical/Up" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 104.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
stretch_mode = 5
_sections_unfolded = [ "Mouse", "Size Flags", "Textures" ]

[node name="Down" type="MarginContainer" parent="Vertical" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 504.0
margin_right = 104.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 8
_sections_unfolded = [ "Size Flags" ]

[node name="DownArrow" type="TextureButton" parent="Vertical/Down" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 104.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 8
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
stretch_mode = 4
_sections_unfolded = [ "Mouse", "Size Flags", "Textures" ]

[node name="Horizontal" type="HBoxContainer" parent="." index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 252.0
margin_right = 1024.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="Left" type="MarginContainer" parent="Horizontal" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 104.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 4
_sections_unfolded = [ "Size Flags" ]

[node name="LeftArrow" type="TextureButton" parent="Horizontal/Left" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 104.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
stretch_mode = 4
_sections_unfolded = [ "Mouse", "Size Flags", "Textures" ]

[node name="Right" type="MarginContainer" parent="Horizontal" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 912.0
margin_right = 1016.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 8
size_flags_vertical = 4
_sections_unfolded = [ "Size Flags" ]

[node name="RightArrow" type="TextureButton" parent="Horizontal/Right" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 104.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 10
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
stretch_mode = 4
_sections_unfolded = [ "Mouse", "Size Flags", "Textures" ]

[node name="NextFloor" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 411.0
margin_top = 213.0
margin_right = 621.0
margin_bottom = 387.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[connection signal="pressed" from="Map" to="." method="_on_Map_pressed"]

[connection signal="pressed" from="Vertical/Up/UpArrow" to="." method="_on_UpArrow_pressed"]

[connection signal="pressed" from="Vertical/Down/DownArrow" to="." method="_on_DownArrow_pressed"]

[connection signal="pressed" from="Horizontal/Left/LeftArrow" to="." method="_on_LeftArrow_pressed"]

[connection signal="pressed" from="Horizontal/Right/RightArrow" to="." method="_on_RightArrow_pressed"]

[connection signal="pressed" from="NextFloor" to="." method="_on_NextFloor_pressed"]


